# gnuplot

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGnuplot.cmake
examples/: CMakeLists.txt  curve.cpp  movingSinus.cpp  simpleLine.cpp
src/: CMakeLists.txt  gnuplot++.cpp  gnuplot++.hpp  session.cpp  session.hpp
tools/: CMakeLists.txt  tools.cpp  tools.hpp
